--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name="org.litepal.LitePalApplication"
         android:theme="@style/Theme.CoolWeather">
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/litepal.xml" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
